--- a/Marvel Page/Marvel Intro.html
+++ b/Marvel Page/Marvel Intro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="Studios.css" rel="stylesheet">
+    <link href="intro.css" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
