just trying here
hope it works

for now its not working
Please enter the commit message for your changes. Lines starting

--- a/BCA project/index.html
+++ b/BCA project/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-    <div>
-        
+<body >
+    <div class="thebody">
+        <video autoplay muted loop>
+            <source src="Media/BG2.mp4" type="video/mp4">
+          </video>
     </div>
-
+    
     <div>
 
     </div>
